# rnd

./: README.md
bash_practices/: 3x10.sh  addition.sh  c2f.sh  distros.sh  error.sh  factorial.sh  filetype.sh  fun.sh  funarg.sh  giga2mega.sh  hello.sh  hello_loop.sh  iseven.sh  numbers.sh  odd.sh  prime.sh  root.sh  scope.sh  timestamp.sh  user.sh  var.sh
test-timeseries/: pyproject.toml
test-timeseries/test_timeseries/: influxdata.py  test_influx.py  test_influx2.py
